--- a/index.html
+++ b/index.html
@@ -512,7 +512,8 @@
             { title: "Dağlar", cat: "yersekilleri", icon: "mountain", desc: "Sıradağlar ve volkanik dağlar.", link: "mountains.html" },
             { title: "Buzullaşma", cat: "yersekilleri", icon: "snowflake", desc: "Buzullaşan alanlar.", link: "buzullasma.html" },
             { title: "Mağaralar", cat: "yersekilleri", icon: "flashlight", desc: "Türkiye'nin gizemli mağaraları.", link: "magaralar.html" },
-            { title: "Şelaleler", cat: "su", icon: "zap", desc: "Türkiye'nin harika şelaleleri.", link: "selale.html" }
+            { title: "Şelaleler", cat: "su", icon: "zap", desc: "Türkiye'nin harika şelaleleri.", link: "selale.html" },
+            { title: "Akarsular", cat: "su", icon: "droplets", desc: "Türkiye'nin Akarsuları.", link: "akarsular.html" }
         ];
 
         let allGames = [...baseGames];
